Tue Mar 24 16:41:18 UTC 2009  Joe Hoffert  <jhoffert@dre.vanderbilt.edu>

        * tao/Valuetype/Bounded_Valuetype_Sequence_T.h
        * tao/Valuetype/Unbounded_Valuetype_Sequence_T.h
          Adding iterators that support memory management.

Tue Mar 24 07:03:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Iterators/Bounded_String.cpp
        * tests/Sequence_Iterators/StringSeq.cpp
        * tests/Sequence_Iterators/Unbounded_Objectref.cpp
        * tests/Sequence_Iterators/Unbounded_Value.cpp
          Disable more code when stl iterators are disabled

Tue Mar 24 06:43:42 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new IDL_Inherited_Operation and the sequence unit tests
          are not using boost anymore

        * tests/Sequence_Unit_Tests/bounded_object_reference_sequence_ut.cpp
        * tests/Sequence_Unit_Tests/bounded_sequence_cdr_ut.cpp
        * tests/Sequence_Unit_Tests/bounded_string_sequence_ut.cpp
        * tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp
        * tests/Sequence_Unit_Tests/fwd_mock_reference.cpp
        * tests/Sequence_Unit_Tests/fwd_mock_reference.hpp
        * tests/Sequence_Unit_Tests/mock_array.hpp
        * tests/Sequence_Unit_Tests/mock_reference.hpp
        * tests/Sequence_Unit_Tests/object_reference_sequence_element_ut.cpp
        * tests/Sequence_Unit_Tests/run_test.pl
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc
        * tests/Sequence_Unit_Tests/string_sequence_element_ut.cpp
        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp
        * tests/Sequence_Unit_Tests/string_ut.cpp
        * tests/Sequence_Unit_Tests/test_macros.h
        * tests/Sequence_Unit_Tests/testing_allocation_traits_ut.cpp
        * tests/Sequence_Unit_Tests/testing_counters.hpp
        * tests/Sequence_Unit_Tests/testing_string_traits.hpp
        * tests/Sequence_Unit_Tests/unbounded_array_sequence_ut.cpp